--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.24.5",
     "axios": "^1.8.4",
     "framer-motion": "^12.5.0",
+    "lucide-react": "^0.485.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1"
